--- a/src/pages/amount/myInfo.scss
+++ b/src/pages/amount/myInfo.scss
@@ -20,7 +20,8 @@ $color-brand: #4f5fc5;
 .study-plan {
   margin-top: 50px;
   border: 2px solid white;
-  border-radius: 50px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
   background-color: white;
 }
 .my-name {
