--- a/src/pages/rank/authRankList.scss
+++ b/src/pages/rank/authRankList.scss
@@ -7,3 +7,21 @@
 .auth-intro {
   margin: auto 10px;
 }
+.rank-intro {
+  margin: 20px auto;
+  width: 180px;
+  color: #999999;
+  font-size: 32px;
+  border-bottom: 1px solid #999999;
+  text-align: center;
+}
+.intro-title {
+  font-weight: bold;
+  font-size: 36px;
+  text-align: center;
+  margin: 80px auto;
+}
+.intro-close {
+  width: 80%;
+  margin: 60px auto;
+}
