--- a/src/pages/detail/langDetail.scss
+++ b/src/pages/detail/langDetail.scss
@@ -101,3 +101,90 @@ $color-brand: #4f5fc5;
   width: 100%;
   height: 40vh;
 }
+//语言细节页单独的css
+.lang-detail {
+  .ad-disad {
+    font-size: 30px;
+    .row-wrap {
+      margin-bottom: 20px;
+    }
+    .icon {
+      margin-right: 20px;
+    }
+  }
+  .app {
+    display: flex;
+    align-items: center;
+  }
+  .wrap-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    .wrap-img {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .img {
+      width: 100px;
+      height: 100px;
+    }
+    .little-title {
+      font-size: 24px;
+    }
+  }
+}
+
+.footer-wrap {
+  height: 150px;
+}
+.fix-footer {
+  background: white;
+  height: 130px;
+  width: 100%;
+  // overflow-y: auto;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  .add-plan {
+    flex: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $color-brand;
+    font-size: 36px;
+    font-weight: bold;
+    color: white;
+  }
+  .share {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    .img {
+      width: 60px;
+      height: 60px;
+    }
+    font-size: 24px;
+  }
+  .ge-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    .img {
+      width: 60px;
+      height: 60px;
+    }
+    font-size: 24px;
+  }
+}
