--- a/src/pages/rank/authRankList.scss
+++ b/src/pages/rank/authRankList.scss
@@ -25,3 +25,33 @@
   width: 80%;
   margin: 60px auto;
 }
+.share {
+  border: 1px solid #999999;
+  background: yellowgreen;
+  height: 80px;
+  width: 80px;
+  position: fixed;
+  right: 40px;
+  bottom: 100px;
+  border-radius: 50%;
+}
+.share-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  .share-wrap {
+    // position: fixed;
+    // top: 100px;
+    // left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto auto;
+    width: 80%;
+    height: 400px;
+  }
+}
