--- a/src/custom-variables.scss
+++ b/src/custom-variables.scss
@@ -6,4 +6,7 @@ $color-brand: #4f5fc5;
   align-items: center;
   justify-content: center;
 }
+.at-card__content {
+  padding: 10px;
+}
 @import "~taro-ui/dist/style/index.scss";
