--- a/src/pages/amount/dailyPlan.scss
+++ b/src/pages/amount/dailyPlan.scss
@@ -4,13 +4,19 @@ $color-brand: #4f5fc5;
   color: $color-brand;
   font-weight: bold;
   font-size: 1.3em;
-  margin: 50px auto;
+  margin: 30px auto;
   display: flex;
   justify-content: center;
 }
 .plan-card {
-  height: 700px;
+  height: 800px;
   background-color: #dcdcdc;
+  .full-plan {
+    height: 680px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
 .transfer-award {
   height: 100px;
@@ -23,7 +29,7 @@ $color-brand: #4f5fc5;
 .plan-item {
   position: absolute;
   width: 100%;
-  height: 560rpx;
+  height: 800rpx;
   z-index: 5;
   opacity: 0.7;
   top: 7%;
@@ -39,5 +45,5 @@ $color-brand: #4f5fc5;
 }
 
 .swiper {
-  height: 800px;
+  height: 1100px;
 }
