--- a/src/pages/rank/authRankList.scss
+++ b/src/pages/rank/authRankList.scss
@@ -51,7 +51,7 @@
     justify-content: center;
     align-items: center;
     margin: auto auto;
-    width: 80%;
-    height: 400px;
+    width: 100%;
+    height: 60%;
   }
 }
