--- a/src/components/rank/authItem.scss
+++ b/src/components/rank/authItem.scss
@@ -1,26 +1,51 @@
 .authItem {
   margin: 0px 40px;
-  height: 130px;
+  height: 116px;
   display: flex;
   align-items: center;
+  justify-content: center;
   border-radius: 20px;
+  padding: 18px auto;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #dddddd;
   .rank-num {
     display: flex;
+    align-items: center;
     justify-content: center;
+    font-size: 40px;
+    font-weight: bold;
   }
   .heat-num {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 1.1em;
     font-weight: bold;
   }
   .icon-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 15px;
   }
   .langImg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 60px;
     height: 60px;
   }
   .lang-name {
     font-size: 1.2em;
+  }
+  .tend-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .tendlogo {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
 
@@ -34,10 +59,4 @@
     width: 50px;
     height: 50px;
   }
-}
-
-.share-canvas {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
