--- a/src/custom-variables.scss
+++ b/src/custom-variables.scss
@@ -1,7 +1,8 @@
 $color-brand: #4f5fc5;
 
 .at-segmented-control__item {
-  height: 60px;
+  width: 542px;
+  height: 64px;
   display: flex;
   align-items: center;
   justify-content: center;
