--- a/src/pages/amount/dailyPlan.scss
+++ b/src/pages/amount/dailyPlan.scss
@@ -10,7 +10,11 @@ $color-brand: #4f5fc5;
 }
 .plan-card {
   height: 800px;
-  background-color: #dcdcdc;
+  background-color: #fff;
+  border: 3px solid #fff;
+  // box-shadow: (20px 20px 20px #dcdcdc, -20px -20px 20px #dcdcdc);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   .full-plan {
     height: 680px;
     width: 100%;
@@ -35,14 +39,14 @@ $color-brand: #4f5fc5;
   top: 7%;
   transform: scale(0.8);
 }
-.active {
-  opacity: 1;
-  z-index: 10;
-  height: 700rpx;
-  top: 0%;
-  transition: all 0.2s ease-in 0s;
-  transform: scale(1);
-}
+// .active {
+//   opacity: 1;
+//   z-index: 10;
+//   height: 700rpx;
+//   top: 0%;
+//   transition: all 0.2s ease-in 0s;
+//   transform: scale(1);
+// }
 
 .swiper {
   height: 1100px;
