--- a/src/pages/amount/myInfo.scss
+++ b/src/pages/amount/myInfo.scss
@@ -78,5 +78,11 @@ $color-brand: #4f5fc5;
 .login-out {
   background-color: #ee4000;
   border-color: #ee4000;
-  margin-top: 120px;
+  margin-top: 50px;
+}
+.add-question {
+  margin: 40px auto;
+  text-align: center;
+  font-size: 28px;
+  color: #999999;
 }
