--- a/src/components/rank/addPlan.scss
+++ b/src/components/rank/addPlan.scss
@@ -1,16 +1,15 @@
 .footer-wrap {
-  height: 150px;
+  height: 130px;
   z-index: 100;
 }
 .fix-footer {
   background: white;
   height: 130px;
   width: 100%;
-  // overflow-y: auto;
   display: flex;
   justify-content: center;
-  position: fixed;
-  bottom: 0;
+  // position: fixed;
+  // bottom: 0;
   .add-plan {
     flex: 3;
     display: flex;
@@ -21,12 +20,18 @@
     font-weight: bold;
     color: white;
   }
-  .share {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  .cl-share {
+    // display: flex;
+    // flex-direction: column;
+    // // justify-content: space-between;
+    // align-items: center;
     flex: 1;
+    .share-button-next {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     .img {
       width: 60px;
       height: 60px;
@@ -55,4 +60,27 @@ button::after {
 button {
   margin: 0;
   padding: 0;
+}
+
+.share-canvas-wrap {
+  .share-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    .share-wrap {
+      // position: fixed;
+      // top: 100px;
+      // left: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: auto auto;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
