--- a/src/pages/amount/dailyPlan.scss
+++ b/src/pages/amount/dailyPlan.scss
@@ -11,7 +11,7 @@ $color-brand: #4f5fc5;
 .plan-card {
   height: 800px;
   background-color: #fff;
-  border: 3px solid #fff;
+  border: 12px solid #4f5fc5;
   // box-shadow: (20px 20px 20px #dcdcdc, -20px -20px 20px #dcdcdc);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -33,7 +33,7 @@ $color-brand: #4f5fc5;
 .plan-item {
   position: absolute;
   width: 100%;
-  height: 800rpx;
+  height: 800px;
   z-index: 5;
   opacity: 0.7;
   top: 7%;
@@ -50,4 +50,10 @@ $color-brand: #4f5fc5;
 
 .swiper {
   height: 1100px;
+}
+.loading-wrap {
+  height: 1100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
