--- a/src/pages/amount/myAward.scss
+++ b/src/pages/amount/myAward.scss
@@ -1,19 +1,35 @@
-.my-award {
-  .award-title {
-    color: #4f5fc5;
-    font-size: 36px;
-    margin: 50px auto 50px 20px;
-    font-weight: 700;
+// .my-award {
+.award-title {
+  color: #4f5fc5;
+  font-size: 36px;
+  margin: 50px auto 50px 20px;
+  font-weight: 700;
+}
+.award-wrap {
+  display: flex;
+  justify-content: space-around;
+}
+.per-award {
+  font-size: 36px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .award-img {
+    width: 350px * 0.8;
+    height: 495px * 0.8;
+    border: 1px solid #dcdcdc;
+    border-radius: 20px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
-  .award-wrap {
-    display: flex;
-    justify-content: space-around;
-  }
-  .per-award {
-    font-size: 36px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+}
+// }
+.pre-award-title {
+  color: #4f5fc5;
+  font-size: 40px;
+  margin: 50px auto 50px 20px;
+  font-weight: 700;
+}
+.blank {
+  height: 80px;
 }
