--- a/src/pages/amount/myAward.scss
+++ b/src/pages/amount/myAward.scss
@@ -8,9 +8,11 @@
 .award-wrap {
   display: flex;
   justify-content: space-around;
+  align-items: flex-start;
 }
 .per-award {
-  font-size: 36px;
+  font-size: 30px;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,6 +23,9 @@
     border: 1px solid #dcdcdc;
     border-radius: 20px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+  .award-name {
+    margin: 5px 20px;
   }
 }
 // }
