--- a/src/pages/detail/langDetail.scss
+++ b/src/pages/detail/langDetail.scss
@@ -95,8 +95,8 @@ $color-brand: #4f5fc5;
   color: $color-brand;
   margin-top: 40px;
   margin-bottom: 40px;
-  font-size: 32px;
-  width: 150px;
+  font-size: 38px;
+  width: 200px;
   border-bottom: 2px solid $color-brand;
 }
 .demand-title {
@@ -141,7 +141,7 @@ $color-brand: #4f5fc5;
       margin-bottom: 20px;
     }
     .icon {
-      margin-right: 20px;
+      // margin-right: 20px;
     }
   }
   .app {
@@ -180,4 +180,36 @@ $color-brand: #4f5fc5;
 }
 .blank {
   height: 50px;
+}
+.share-canvas-wrap {
+  .share-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    .share-wrap {
+      // position: fixed;
+      // top: 100px;
+      // left: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: auto auto;
+      width: 100%;
+      height: 100%;
+      .close-canvas {
+        margin-top: 20px;
+        background-color: #efefef;
+        width: 750px;
+        height: 70px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 }
