--- a/src/pages/rank/authRankList.scss
+++ b/src/pages/rank/authRankList.scss
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .share {
   display: flex;
   justify-content: center;
@@ -65,8 +66,9 @@
     margin: auto auto;
     width: 100%;
     height: 100%;
-    .close-canvas {
-      width: 320px;
-    }
   }
+}
+.close-canvas {
+  position: fixed;
+  right: 0;
 }
