更新一部分静态

--- a/src/custom-variables.scss
+++ b/src/custom-variables.scss
@@ -13,4 +13,17 @@ $color-brand: #4f5fc5;
 .at-card__header {
   display: none !important;
 }
+.at-tabs__item {
+  font-weight: 800;
+}
+.at-tabs__item-underline {
+  width: 20% !important;
+  left: 40% !important;
+}
+.at-input {
+  padding: 0 !important;
+  width: 480px !important;
+  height: 80px !important;
+  border: 1px solid #333 !important;
+}
 @import "~taro-ui/dist/style/index.scss";
