--- a/src/components/rank/addPlan.scss
+++ b/src/components/rank/addPlan.scss
@@ -8,6 +8,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   .add-plan {
     flex: 1;
     display: flex;
@@ -23,9 +24,6 @@
       height: 70px;
       margin-right: 20px;
     }
-  }
-  .no-add-plan {
-    // background-color: #dcdcdc;
   }
   .cl-share {
     flex: 1;
