--- a/src/pages/detail/langDetail.scss
+++ b/src/pages/detail/langDetail.scss
@@ -4,7 +4,67 @@ $color-brand: #4f5fc5;
   height: 120px;
 }
 .wrap-content {
-  margin: 0 40px;
+  margin: 0 20px;
+}
+.intro-card {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 160px;
+  border: 1px solid #dcdcdc;
+  border-radius: 10px;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+  margin: 40px auto;
+  .per-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    .tend-name {
+      font-size: 30px;
+      font-weight: 500;
+    }
+    .tend-num {
+      font-size: 50px;
+      font-weight: 800;
+    }
+  }
+  .divider {
+    width: 2px;
+    height: 60%;
+    border: 2px solid #999;
+  }
+}
+//
+.avatar-wrap {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  .per-avatar {
+    margin: auto 10px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    image {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
+  }
+  .per-avatar-add {
+    border: 6px solid #4f5fc5;
+    button {
+      line-height: 0;
+    }
+    .button-hover {
+      background-color: #fff;
+      line-height: 0;
+    }
+  }
 }
 .wrap-title {
   color: $color-brand;
@@ -34,29 +94,28 @@ $color-brand: #4f5fc5;
   }
   .state {
     flex: 5;
-    font-size: 32px;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 }
-.data-info {
-  display: flex;
-  justify-content: space-around;
-  .tend-title {
-    font-size: 32px;
-    font-weight: 600;
-  }
-  .tend-num {
-    font-size: 75px;
-    font-weight: 800;
-  }
-}
-.tend-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+// .data-info {
+//   display: flex;
+//   justify-content: space-around;
+//   .tend-title {
+//     font-size: 32px;
+//     font-weight: 600;
+//   }
+//   .tend-num {
+//     font-size: 75px;
+//     font-weight: 800;
+//   }
+// }
+// .tend-wrap {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
 
 .heat-company {
   display: flex;
@@ -139,9 +198,6 @@ $color-brand: #4f5fc5;
     font-size: 30px;
     .row-wrap {
       margin-bottom: 20px;
-    }
-    .icon {
-      // margin-right: 20px;
     }
   }
   .app {
