--- a/src/pages/class/classIndex.scss
+++ b/src/pages/class/classIndex.scss
@@ -21,8 +21,8 @@
     width: 350px * 0.8;
     height: 495px * 0.8;
     border: 1px solid #dcdcdc;
-    border-radius: 20px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    border-radius: 10px;
+    // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
   .award-name {
     margin: 5px 20px;
