--- a/src/pages/class/classHome.scss
+++ b/src/pages/class/classHome.scss
@@ -51,6 +51,33 @@
       font-size: 30px;
     }
   }
+  .member-list {
+    margin: 20px auto;
+    .member-item {
+      display: flex;
+      align-items: center;
+      height: 130px;
+
+      .rank {
+        flex: 1;
+      }
+      .avatar-wrap {
+        flex: 1;
+        margin: auto 10px;
+        .avatar {
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+        }
+      }
+      .name {
+        flex: 4;
+      }
+      .total {
+        flex: 2;
+      }
+    }
+  }
 }
 
 .at-tabs__header {
