--- a/src/components/detail/comment.scss
+++ b/src/components/detail/comment.scss
@@ -1,7 +1,7 @@
 .comment-wrap {
   display: flex;
   align-items: flex-start;
-  padding: 0px;
+  padding: 20px;
   .avatar {
     padding: 20px;
   }
@@ -11,6 +11,8 @@
     justify-content: flex-start;
     font-size: 35px;
     font-weight: 400;
+    width: 100%;
+
     .title {
       display: flex;
       justify-content: space-between;
@@ -19,7 +21,7 @@
       }
     }
     .content {
-      margin: 30px auto;
+      margin: 20px 5px;
       white-space: pre-line;
     }
     .time {
