--- a/src/pages/class/classIndex.scss
+++ b/src/pages/class/classIndex.scss
@@ -7,8 +7,14 @@
 }
 .award-wrap {
   display: flex;
-  justify-content: space-around;
+  // justify-content: space-around;
   align-items: flex-start;
+}
+.left {
+  flex: 1;
+}
+.right {
+  flex: 1;
 }
 .per-award {
   font-size: 30px;
