--- a/src/pages/class/classHome.scss
+++ b/src/pages/class/classHome.scss
@@ -27,7 +27,28 @@
         font-size: 30px;
         font-weight: 300;
       }
+      .title-action {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        .icon {
+          width: 56px;
+          height: 56px;
+        }
+        .more-img {
+          margin-left: 30px;
+        }
+      }
     }
+  }
+  .no-plan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    border-radius: 20px;
+    background-color: #c7c7c7;
+    margin-bottom: 20px;
   }
   .content-name {
     font-weight: 700;
