--- a/src/pages/class/classIndex.scss
+++ b/src/pages/class/classIndex.scss
@@ -7,38 +7,48 @@
 }
 .award-wrap {
   display: flex;
-  // justify-content: space-around;
   align-items: flex-start;
-}
-.left {
-  flex: 1;
-}
-.right {
-  flex: 1;
+  flex-wrap: wrap;
 }
 .per-award {
   font-size: 30px;
-  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 50%;
+  margin-bottom: 15px;
+  .award-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
   .award-img {
     width: 350px * 0.8;
     height: 495px * 0.8;
-    border: 1px solid #dcdcdc;
-    border-radius: 10px;
     // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
   .award-name {
     margin: 5px 20px;
+  }
+  .monitor-name {
+    background-color: #4f5fc5;
+    color: #fff;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .add-award-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid #4f5fc5;
+    color: #4f5fc5;
+    border: 4px dashed #4f5fc5;
+    .add {
+      font-size: 90px;
+    }
   }
 }
 // }
