--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -2,4 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 100%;
+}
+.login-img {
+  width: 100%;
+}
+.login-wrap {
+  background-image: url("../../assets/img/login.png");
+  overflow: hidden;
+  position: fixed;
+  margin: 0px;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
 }
