--- a/src/pages/amount/dailyPlan.scss
+++ b/src/pages/amount/dailyPlan.scss
@@ -8,6 +8,22 @@ $color-brand: #4f5fc5;
   display: flex;
   justify-content: center;
 }
+.content-wrap {
+  font-size: 30px;
+  .brief {
+    font-size: 40px;
+    font-weight: 700;
+    margin: 20px 0;
+  }
+  .codeStr {
+    margin: 10px 0;
+    font-size: 25px;
+  }
+  .text-copy {
+    font-weight: 300;
+    font-size: 20px;
+  }
+}
 // .plan-card {
 //   height: 800px !important;
 //   background-color: #fff;
@@ -42,9 +58,6 @@ $color-brand: #4f5fc5;
 }
 .get-award {
   margin-bottom: 60px;
-}
-.action {
-  margin: -10px 50px;
 }
 .swiper {
   height: 400px;
