--- a/src/pages/amount/myCollect.scss
+++ b/src/pages/amount/myCollect.scss
@@ -2,7 +2,8 @@
   padding: 20px;
   .collect-wrap {
     padding: 20px;
-    border-radius: 5px;
+    margin: 40px 0;
+    border-radius: 10px;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     .content-wrap {
       display: flex;
