--- a/src/pages/class/classIndex.scss
+++ b/src/pages/class/classIndex.scss
@@ -1,4 +1,15 @@
 // .my-award {
+.my-form {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 30px;
+  padding: 20px;
+  .picker {
+    color: #4f5fc5;
+    margin: 0 15px;
+  }
+}
 .award-title {
   color: #4f5fc5;
   font-size: 36px;
@@ -24,9 +35,8 @@
     justify-content: flex-start;
   }
   .award-img {
-    width: 350px * 0.8;
-    height: 495px * 0.8;
-    // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    width: 297px;
+    height: 396px;
   }
   .award-name {
     margin: 5px 20px;
@@ -46,8 +56,9 @@
     align-items: center;
     color: #4f5fc5;
     border: 4px dashed #4f5fc5;
+    height: 446px;
     .add {
-      font-size: 90px;
+      font-size: 130px;
     }
   }
 }
@@ -59,5 +70,5 @@
   font-weight: 700;
 }
 .blank {
-  height: 80px;
+  height: 30px;
 }
