--- a/src/pages/amount/myCollect.scss
+++ b/src/pages/amount/myCollect.scss
@@ -16,6 +16,10 @@
         .title {
           font-weight: 600;
         }
+        .codeStr {
+          font-weight: 400;
+          font-size: 30px;
+        }
       }
     }
     .come-from {
