--- a/src/components/class/shareBtn.scss
+++ b/src/components/class/shareBtn.scss
@@ -13,4 +13,7 @@ button::after {
 button {
   background-color: #fff;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
