--- a/src/pages/class/classHome.scss
+++ b/src/pages/class/classHome.scss
@@ -41,6 +41,22 @@
       }
     }
   }
+  .intro-title {
+    color: #4f5fc5;
+    font-weight: 600;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    margin: 20px auto;
+  }
+  .intro-content {
+    font-size: 30px;
+    color: #111;
+    white-space: pre-wrap;
+    line-height: 2em;
+    margin-bottom: 40px;
+    margin: auto 50px;
+  }
   .no-plan {
     display: flex;
     justify-content: center;
@@ -60,6 +76,7 @@
     justify-content: center;
     align-items: center;
     color: #4f5fc5;
+    margin-top: 20px;
     .content-detail {
       width: 100%;
       height: 300px;
@@ -75,19 +92,6 @@
     .punch-rule {
       margin: 15px auto;
       font-size: 30px;
-    }
-    .intro-title {
-      font-size: 40px;
-      display: flex;
-      justify-content: center;
-      margin: 20px auto;
-    }
-    .intro-content {
-      font-size: 35px;
-      color: #111;
-      white-space: pre-wrap;
-      line-height: 2em;
-      margin-bottom: 40px;
     }
   }
   .member-list {
