--- a/src/pages/detail/langDetail.scss
+++ b/src/pages/detail/langDetail.scss
@@ -92,7 +92,7 @@ $color-brand: #4f5fc5;
     margin-left: 15px;
   }
   .state {
-    flex: 5;
+    flex: 6;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -122,8 +122,37 @@ $color-brand: #4f5fc5;
     align-items: flex-end;
   }
 }
-.history {
-  font-size: 24px;
+.github {
+  font-size: 30px;
+  .top-wrap {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    .left {
+      width: 90px;
+      height: 90px;
+    }
+    .right {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      margin-left: 20px;
+      .name {
+        font-weight: 900;
+        font-size: 35px;
+      }
+    }
+  }
+  .brief {
+    font-weight: 200;
+    margin: 30px 0;
+    white-space: pre-line;
+  }
+  .link {
+    text-decoration: underline;
+    color: #4f5fc5;
+  }
 }
 .to-detail-wrap {
   display: flex;
@@ -133,11 +162,12 @@ $color-brand: #4f5fc5;
   display: flex;
   justify-content: center;
   color: $color-brand;
-  margin-top: 40px;
+  margin-top: 60px;
   margin-bottom: 40px;
   font-size: 38px;
   width: 200px;
-  border-bottom: 2px solid $color-brand;
+  // border-bottom: 2px solid $color-brand;
+  text-decoration: underline;
 }
 .demand-title {
   display: flex;
@@ -180,6 +210,11 @@ $color-brand: #4f5fc5;
     .row-wrap {
       margin-bottom: 20px;
     }
+  }
+  .difficult {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
   .app {
     display: flex;
@@ -247,41 +282,20 @@ $color-brand: #4f5fc5;
     }
   }
 }
-.input-top {
-  height: 100px;
-}
-.input-wrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: #fff;
-  .input {
-    width: 80%;
-    height: 80px;
-    border: 1px solid #6e7b8b;
-  }
-  .button {
-    height: 100px;
-    width: 20%;
-  }
-}
-at-input {
-  width: 80%;
-}
 at-button {
   width: 20%;
 }
-.at-input {
-  padding: 0px !important;
-  height: 80px !important;
-  border: 1px solid #333 !important;
-  border-radius: 10px;
-  margin-right: 10px;
+.tostudy-btn {
+  // width: 50% !important;
+  height: 90px;
+  line-height: 90px;
+  font-size: 35px;
+  width: 160px;
 }
-.at-input__container {
-  height: 100%;
+//修改徽标默认样式
+.badge {
+  margin-left: 25px;
+}
+.at-badge__num {
+  width: 40px;
 }
