--- a/src/pages/amount/userRank.scss
+++ b/src/pages/amount/userRank.scss
@@ -117,6 +117,30 @@
     }
   }
 }
+.share-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  .share-wrap {
+    // position: fixed;
+    // top: 100px;
+    // left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto auto;
+    width: 100%;
+    height: 100%;
+  }
+}
+.close-canvas {
+  position: fixed;
+  right: 0;
+}
 //更改默认样式
 .at-tabs__header {
   width: 60%;
