--- a/src/pages/class/classHome.scss
+++ b/src/pages/class/classHome.scss
@@ -125,7 +125,31 @@
     }
   }
 }
-
+.share-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  .share-wrap {
+    // position: fixed;
+    // top: 100px;
+    // left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto auto;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+  }
+  .close-canvas {
+    position: fixed;
+    right: 0;
+  }
+}
 .at-tabs__header {
   width: 40% !important;
 }
