--- a/src/pages/detail/langDetail.scss
+++ b/src/pages/detail/langDetail.scss
@@ -77,7 +77,7 @@ $color-brand: #4f5fc5;
   align-items: center;
   margin-top: 20px;
   .icon {
-    flex: 2;
+    flex: 1;
     margin-right: 20px;
   }
   .name {
@@ -107,6 +107,10 @@ $color-brand: #4f5fc5;
     flex: 2;
     margin-right: 30px;
   }
+  .com-logo {
+    width: 100px;
+    height: 100px;
+  }
   .name {
     flex: 3;
     font-size: 36px;
@@ -120,10 +124,13 @@ $color-brand: #4f5fc5;
     font-size: 32px;
     font-weight: 600;
     align-items: flex-end;
+    white-space: pre-line;
+    margin-left: 20px;
   }
 }
 .github {
   font-size: 30px;
+  margin: 50px auto;
   .top-wrap {
     display: flex;
     justify-content: flex-start;
@@ -136,7 +143,7 @@ $color-brand: #4f5fc5;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      align-items: center;
+      align-items: flex-start;
       margin-left: 20px;
       .name {
         font-weight: 900;
@@ -146,12 +153,13 @@ $color-brand: #4f5fc5;
   }
   .brief {
     font-weight: 200;
-    margin: 30px 0;
+    margin: 25px 0;
     white-space: pre-line;
   }
   .link {
     text-decoration: underline;
     color: #4f5fc5;
+    white-space: pre-line;
   }
 }
 .to-detail-wrap {
