--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,18 +1,25 @@
-.btn-wrap {
+.login-wrap {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100%;
-}
-.login-img {
-  width: 100%;
-}
-.login-wrap {
-  background-image: url("../../assets/img/login.png");
-  overflow: hidden;
-  position: fixed;
-  margin: 0px;
-  background-size: 100% 100%;
-  width: 100%;
-  height: 100%;
+  .logo {
+    width: 350px;
+    height: 350px;
+    margin: 100px auto 50px auto;
+  }
+  .title-one {
+    font-size: 45px;
+    font-weight: 700;
+  }
+  .title-two {
+    font-size: 35px;
+    font-weight: 400;
+    margin: 30px auto 50px auto;
+  }
+  .btn-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
