带打印的test2.0版本

--- a/src/custom-variables.scss
+++ b/src/custom-variables.scss
@@ -23,5 +23,8 @@ swiper-item {
   display: flex;
   align-items: center;
 }
+.at-pagination {
+  margin: 30px 40px !important;
+}
 
 @import "~taro-ui/dist/style/index.scss";
