--- a/src/pages/amount/myAward.scss
+++ b/src/pages/amount/myAward.scss
@@ -3,6 +3,7 @@
   font-size: 33px;
   margin: 50px auto 50px 50px;
   font-weight: 700;
+  white-space: pre-line;
 }
 .award-wrap {
   display: flex;
