--- a/src/components/class/classMember.scss
+++ b/src/components/class/classMember.scss
@@ -27,4 +27,12 @@
       flex: 2;
     }
   }
+  .no-friend-note {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #838b8b;
+    font-size: 35px;
+    font-weight: 100;
+  }
 }
