--- a/src/components/detail/comment.scss
+++ b/src/components/detail/comment.scss
@@ -2,11 +2,12 @@
   display: flex;
   align-items: flex-start;
   padding: 20px 0;
+  border-bottom: 2px solid #dcdcdc;
   .avatar-wrap {
     padding: 10px 20px 20px 0;
     .avatar {
-      width: 100px;
-      height: 100px;
+      width: 70px;
+      height: 70px;
       border-radius: 50%;
     }
   }
@@ -14,15 +15,15 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    font-size: 35px;
     font-weight: 400;
     width: 100%;
-
     .title {
       display: flex;
       justify-content: space-between;
       .nickname {
-        font-weight: 600;
+        font-weight: 500;
+        font-size: 25px;
+        color: #4f5fc5;
       }
       .floor {
         font-weight: 100;
@@ -30,12 +31,14 @@
       }
     }
     .content {
-      margin: 20px 5px;
+      margin: 0px 5px 10px 5px;
       white-space: pre-line;
-      font-size: 30px;
+      font-size: 35px;
+      // font-weight: 700;
     }
     .time {
-      font-size: 30px;
+      color: #dcdcdc;
+      font-size: 20px;
       font-weight: 100;
     }
   }
