--- a/src/pages/amount/dailyPlan.scss
+++ b/src/pages/amount/dailyPlan.scss
@@ -10,7 +10,7 @@
   background-color: #dcdcdc;
   border-radius: 10px;
   align-self: flex-start;
-  padding: 10px;
+  padding: 10px 10px 0px 10px;
   flex: 8;
   height: 90%;
 }
