--- a/src/pages/amount/userRank.scss
+++ b/src/pages/amount/userRank.scss
@@ -67,7 +67,6 @@
       height: 200px;
     }
     .plan-text {
-      margin-left: 20px;
       font-weight: 500;
       white-space: pre-wrap;
     }
@@ -107,6 +106,9 @@
         width: 60px;
         height: 40px;
       }
+    }
+    .member-item-title {
+      height: 50px;
     }
     .selected-item {
       background-color: #c7c7c7;
