--- a/src/pages/class/classHome.scss
+++ b/src/pages/class/classHome.scss
@@ -57,6 +57,9 @@
     margin-bottom: 40px;
     margin: auto 50px;
   }
+  .intro-close {
+    margin: 20px 50px 20px 50px;
+  }
   .no-plan {
     display: flex;
     justify-content: center;
@@ -133,9 +136,6 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   .share-wrap {
-    // position: fixed;
-    // top: 100px;
-    // left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -151,5 +151,8 @@
   }
 }
 .at-tabs__header {
-  width: 40% !important;
+  width: 60% !important;
+}
+.at-divider {
+  height: 50px;
 }
