--- a/src/pages/class/classIndex.scss
+++ b/src/pages/class/classIndex.scss
@@ -37,6 +37,8 @@
   .award-img {
     width: 297px;
     height: 396px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
   .award-name {
     margin: 5px 20px;
@@ -48,6 +50,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
   .add-award-content {
     display: flex;
@@ -55,7 +59,8 @@
     justify-content: center;
     align-items: center;
     color: #4f5fc5;
-    border: 4px dashed #4f5fc5;
+    border: 4px dashed #b0b0b0;
+    border-radius: 10px;
     height: 446px;
     .add {
       font-size: 130px;
