--- a/src/pages/class/classList.scss
+++ b/src/pages/class/classList.scss
@@ -16,3 +16,10 @@
     margin: auto 3px;
   }
 }
+.note-add {
+  font-weight: 100;
+  font-size: 30px;
+  white-space: pre-line;
+  margin: 30px 20px;
+  color: #000;
+}
