--- a/src/pages/amount/memberRank.scss
+++ b/src/pages/amount/memberRank.scss
@@ -29,7 +29,7 @@
     }
   }
   .member-list {
-    margin: 20px auto;
+    margin-bottom: 30px;
     .title {
       color: #4f5fc5;
       font-size: 30px;
