修复一点点小bug

--- a/src/pages/class/classHome.scss
+++ b/src/pages/class/classHome.scss
@@ -1,5 +1,9 @@
 .classHome {
   padding: 40px;
+  .lesson-detail {
+    display: inline-block;
+    vertical-align: middle;
+  }
   .title-wrap {
     display: flex;
     justify-content: flex-start;
